--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="./react-router-dom.development.js"></script>
+    <!-- <script src="./react-router-dom.development.js"></script>
     <script src="./react-router-dom.development.js.map"></script>
     
     <script src="./react-router.development.js"></script>
-    <script src="./react-router.development.js.map"></script>
+    <script src="./react-router.development.js.map"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
